--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"three": "^0.180.0",
 		"ts-essentials": "^10.1.1",
 		"vaul": "^1.1.2",
+		"xstate": "^5.22.0",
 		"zod": "^3.25.76"
 	},
 	"devDependencies": {
